API users can't override protected status anymore
Issue: DATA-324

FIX: Keep track of what resources are protected with a new table `resource_protected`

TODO:

1. implement admin command for checking if a resource is protected
2. Update readme instructions to include steps for adding the resource_protected table
3. After merging, bump and release this new version

--- a/ckanext/protected_resources/templates/package/snippets/lock_resource_button.html
+++ b/ckanext/protected_resources/templates/package/snippets/lock_resource_button.html
@@ -1,4 +1,5 @@
-{% if resource.is_protected %}
+{% set is_protected = h.resource_has_protected_status(resource.id) %}
+{% if is_protected %}
     {% set resource_url = h.url_for('protected_resource_unlock', dataset_id=resource.package_id, resource_id=resource.id) %}
     <a class="btn btn-danger" href="{{resource_url}}"><i class="fa fa-unlock fa-lg"></i> Unlock Resource</a>
 {% else %}
