--- a/ckanext/protected_resources/templates/package/snippets/package_form.html
+++ b/ckanext/protected_resources/templates/package/snippets/package_form.html
@@ -11,6 +11,11 @@
 
 {% block delete_button %}
     {% if h.check_access('package_delete', {'id': data.id}) and not data.state == 'deleted' and not is_protected%}
-          <a class="btn btn-danger pull-left" href="{% url_for controller='package', action='delete', id=data.id %}" data-module="confirm-action" data-module-content="{{ _('Are you sure you want to delete this dataset?') }}">{% block delete_button_text %}{{ _('Delete') }}{% endblock %}</a>
+        {% if h.check_ckan_version('2.9') %}
+            {% set url = h.url_for(dataset_type ~ '.delete', id=data.id) %}
+        {% else %}
+            {% set url = h.url_for(controller='package', action='delete', resource_id=data.id, id=pkg_name) %}
+        {% endif %}
+        <a class="btn btn-danger pull-left" href="{{ url }}" data-module="confirm-action" data-module-content="{{ _('Are you sure you want to delete this dataset?') }}">{% block delete_button_text %}{{ _('Delete') }}{% endblock %}</a>
     {% endif %}
 {% endblock %}
