--- a/ckanext/protected_resources/templates/package/snippets/resource_form.html
+++ b/ckanext/protected_resources/templates/package/snippets/resource_form.html
@@ -7,7 +7,12 @@
     {% if data.id %}
         {% set is_protected = h.resource_has_protected_status(data.id) %}
         {% if h.check_access('resource_delete', {'id': data.id}) and not is_protected %}
-          <a class="btn btn-danger pull-left" href="{% url_for controller='package', action='resource_delete', resource_id=data.id, id=pkg_name %}" data-module="confirm-action" data-module-content="{{ _('Are you sure you want to delete this resource?') }}">{% block delete_button_text %}{{ _('Delete') }}{% endblock %}</a>
+            {% if h.check_ckan_version('2.9') %}
+                {% set url = h.url_for(dataset_type ~ '_resource.delete', resource_id=data.id, id=pkg_name) %}
+            {% else %}
+                {% set url = h.url_for(controller='package', action='delete', resource_id=data.id, id=pkg_name) %}
+            {% endif %}
+            <a class="btn btn-danger pull-left" href="{{ url }}" data-module="confirm-action" data-module-content="{{ _('Are you sure you want to delete this resource?') }}">{% block delete_button_text %}{{ _('Delete') }}{% endblock %}</a>
         {% endif %}
         {% if is_protected %}
             <span class="action-info">This resource is protected, contact <a href="mailto:{{h.sysadmin_email()}}">{{h.sysadmin_email()}}</a> to request deletion.</span>
